# Zero-G

./: .gitignore  AGENT_FLOW.md  CHANGELOG.md  LICENSE.txt  README.md  USAGE.md  package-lock.json  package.json
.agent/rules/: CRITICAL_RULES.md  MASTER_CHECKLIST.md  OPERATIONAL_PROTOCOLS.md  USER_PREFERENCES.md
.agent/templates/: PROJECT_DNA.md
mcp-server/: pyproject.toml
mcp-server/src/zero_g_server/: server.py
web/: README.md
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/docs/: layout.tsx  page.tsx
web/src/app/docs/agents/: page.tsx
web/src/app/docs/cli/: page.tsx
web/src/app/docs/guide/examples/web-app/: page.tsx
web/src/app/docs/installation/: page.tsx
web/src/components/layout/footer/: index.tsx
web/src/components/layout/header/: index.tsx
web/src/components/layout/header/components/: donate-dialog.tsx  mobile-menu.tsx
