[project]
name = "zero-g-server"
version = "0.1.0"
description = "MCP Server for the Zero-G Agent Kit"
authors = [
    {name = "Nina DNJ", email = "nina@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=0.1.0",
    "pydantic>=2.0.0"
]

[project.scripts]
zero-g = "zero_g_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zero_g_server"]
